--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "symfony/messenger": "^5.4"
+    "symfony/messenger": "^5.4",
+    "symfony/uid": "^6.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
